--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <div class="main">
 <h1>Welcome To ZEN</h1>
 <p>Martha Lane Fox es una empresaria, filántropa y empleada pública británica.​Lane-Fox es fundadora y presidenta ejecutiva de Doteveryone.one.org.uk, un centro de investigación independiente y organización benéfica que defiende la tecnología responsable para un futuro más justo</p>
+<p>Fue educada en la Oxford High School, una escuela sólo para chicas en Oxford, y en la Westminster School, una escuela pública de Londres que era sólo para chicos excepto en los últimos cursos, dónde ya eran mixtos. Leyó historia antigua y moderna en el Magdalen College de Oxford, se graduó en licenciatura de artes y también recibió el título de Master of Arts.</p>
 <p>This template is coded in W3C valid HTML 5 and CSS 3, it has been tested in internet explorer 10, Google Chrome, and Firefox. Detailed instructions on how to configure a facebook likebox like the one shown in the sidebar are also enclosed within HTML comment tags in the templates index.html file.</p>
 <blockquote>He who seeds a thought, harvests a destiny.<cite>Zen Proverb</cite></blockquote>
 <p>Zen is released on a creative commons licence, this means you are free to use the template for both business and personal purposes but the web designers link in the footer must remain. The link has been styled to be as unobtrusive as possible and every attempt has been made to give this template the the look and feel of a professionally designed website rather than that of a free template.</p>
